--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,3 +1,14 @@
-<h1>A-F-L</h1>
 
-<%= link_to "About", about_path %>
+<h1 class="headline-primary" style="text-align: center; color: red;">--- A ---<br />-- FINER --<br />-- LOVE --<br />---------<br />-----<br />-</h1>
+
+<div class="grid">
+	<header class="grid__col--12 header panel--centered" role="banner">
+		<nav>
+			<ul id="navbar">
+				<li class="nav__item"><%= link_to "ABOUT", about_path %></li>
+				<li class="nav__item"><%= link_to "ARCHIVES", about_path %></li>
+				<li class="nav__item"><%= link_to "PODCAST", about_path %></li>
+			</ul>
+		</nav>
+	</header>
+</div>
