--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -2,3 +2,20 @@
 // Navigation
 //
 
+.nav {
+    margin-top: em(5px);
+    margin-bottom: em(4.5px);
+	padding: 0;
+    @include e(item) {
+        @extend %nav-item-disp;
+        a {
+            @extend %nav-item-links;
+        }
+        @include m(current) {
+            @extend %nav-item-disp;
+            a {
+                @extend %nav-item-links;
+            }
+        }
+    }
+}
