--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Create an Article</h1>
 
+<% if @article.errors.any? %>
+	<h2>These errors prevented article creation:</h2>
+	<ul>
+		<% @article.errors.full_messages.each do |message| %>
+		<li><%= message %></li>
+		<% end %>
+	</ul>
+<% end %>
+
 <%= form_for @article do |f| %>
 
 	<p>
