Added partial (for view, and edit) and delete action.

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -6,7 +6,7 @@
 		<nav>
 			<ul id="navbar">
 				<li class="nav__item"><%= link_to "ABOUT", about_path %></li>
-				<li class="nav__item"><%= link_to "ARCHIVES", about_path %></li>
+                <li class="nav__item"><%= link_to "ARTICLES", articles_path %></li>
 				<li class="nav__item"><%= link_to "PODCAST", about_path %></li>
 			</ul>
 		</nav>
