--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,3 +9,6 @@
 <p>
 	Description: <%= @article.description %>
 </p>
+
+<%= link_to "Edit This Article", edit_article_path %>
+<%= link_to "Return to Articles List", articles_path %>
