Misc. content additions/removals.

--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,5 +1,5 @@
 
-<h1 class="headline-primary" style="text-align: center; color: red;">--- A ---<br />-- FINER --<br />-- LOVE --<br />---------<br />-----<br />-</h1>
+<h1 class="headline-primary" style="text-align: center; color: red;">--- A ---<br />-- F --<br />-- L --<br />---------<br />-----<br />-</h1>
 
 <div class="grid">
 	<header class="grid__col--12 header panel--centered" role="banner">
